--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -5,6 +5,7 @@ it:
       short: "%d %b"
       medium: "%d %b %y"
       long: "%d %B %Y"
+      custom: "%d %b %Y"
 
     day_names: [Domenica, Lunedì, Martedì, Mercoledì, Giovedì, Venerdì, Sabato]
     abbr_day_names: [Dom, Lun, Mar, Mer, Gio, Ven, Sab]
